# scrcpy

./: .gitignore  ScrcpyDotNet.cs  ScrcpyDotNetApp.cs  build.gradle  meson.build
app/: meson.build
app/src/: cli.c  display.c  display.h  fps_counter.c  input_manager.c  input_manager.h  main.c  options.c  options.h  scrcpy.c  scrcpy.h  screen.c  screen.h  server.c  server.h
app/src/net_cmd/: net_cmd.cpp  net_cmd.h
app/src/netevent/: netevent.c  netevent.cpp  netevent.h
app/src/usb/: scrcpy_otg.c
app/src/util/: capture_screen.cpp  capture_screen.h  cmd_input.cpp  cmd_input.h  env.c  env.h  file_mapping.c  file_mapping.h  image_transmitter.cpp  image_transmitter.h  shared_memory.c  shared_memory.h  thread.c  work_dir.cpp  work_dir.h
dotnet_test/: FileMappingReader.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  Program.cs  README_FILE_MAPPING.md  README_IMAGE_TRANSMITTER.md  ScrcpyImageViewer.csproj  SharedMemoryReader.cs
release/: build_macos.sh  build_macos_debug.sh  build_windows.sh  build_windows_debug.sh
server/src/main/java/com/genymobile/scrcpy/: Options.java
server/src/main/java/com/genymobile/scrcpy/audio/: AudioDirectCapture.java
server/src/main/java/com/genymobile/scrcpy/opengl/: GLUtils.java  MultiRegionOpenGLFilter.java
server/src/main/java/com/genymobile/scrcpy/util/: SpatialUtils.java
server/src/main/java/com/genymobile/scrcpy/video/: NewDisplayCapture.java  ScreenCapture.java
server/src/main/java/com/genymobile/scrcpy/wrappers/: DisplayManager.java
